--- a/Ch1_NLNP.tex
+++ b/Ch1_NLNP.tex
@@ -91,11 +91,11 @@ The system is expected to stabilize in an orientation that maximises the nanopar
 %The scattering cross-sections of metal nanocolloids are much greater than their geometrical cross-section at resonance~\cite{Mie}, and 5 orders than the light emission from strongly fluorescing dyes~\cite{Jain2}, indicating a strongly scattering medium. %Autocorrelation data shows significant pulse broadening through 400 $\mu$m of nanocolloid solution from 2.3 ps to 3.2 ps, which suggest appreciable multiple scattering events, despite low fill factors (2.5$\times 10^{-6}$). 
 Another possibility for the larger-than-expected results is diffractive coupling between nanoparticles that can exhibit strong long-range interaction [\cite{Barnes2}] that lead to near-field enhancements, which are anticipated to increase in a 3-D matrix. The material properties of the matrix also influence the MO response. For instance, the presence of any ions or charged particles, common in solvents such as water, modifies the electrodynamics of the system, which subsequently influences the MO response of the system.
 \section{Conclusion}
-\indent This chapter demonstrates the observation of MO responses in non-magnetic nanocolloids at ultra-low illumination intensities and magnetic fields. Metal nanocolloids are magnetized and the optical properties are shifted when excited by coincident elliptically-polarized electric fields and DC magnetic fields. Experimentally-observed extinction spectra are in good agreement with predictions of linear and nonlinear MO effects and new considerations are provided for novel mechanical effects that were previously considered unattainable. A theoretical model is demonstrated that successfully explains the transition between linear and nonlinear MO plasmon dynamics of metal nanoparticles. This chapter provides the theoretical framework to study MO responses in non-magnetic nanostructures. In particular, new methods to identify, optically self-assemble and magnetically torque large quantities of disperse, non-spherical nanoparticles with broadband light sources are realised.
+\indent This chapter demonstrates the observation of MO responses in non-magnetic nanocolloids at ultra-low illumination intensities and magnetic fields. Metal nanocolloids are magnetized and the optical properties are shifted when excited by coincident elliptically-polarized electric fields and DC magnetic fields. Experimentally-observed extinction spectra are in good agreement with predictions of linear and nonlinear MO effects and new considerations are provided for novel mechanical effects that were previously considered unattainable. A theoretical model is demonstrated that successfully explains the transition between linear and nonlinear MO plasmon dynamics of metal nanoparticles. This chapter provides the theoretical framework to study MO responses in non-magnetic nanostructures. In particular, new methods to identify, optically self-assemble and magnetically torque large quantities of disperse, non-spherical nanoparticles with broadband light sources are realized.
 
 \section{Experimental difficulties and future work}
 The experimental procedure to study the transmission properties were quite difficult. One recurrent issue that occurred was a time dependence in the transmission properties before any magnetic field was applied. This issue was attributed to thermal stabilization of the system and was overcome by waiting for the transmission properties to thermally stabilize before turning on the magnetic field and taking any measurements.
 
 Care was also taken in the amount of light intensity, as it was found that if the light intensity was too great, there would be aggregation and settling of the nanoparticles at the bottom of the substrate. Aggregation may affect the results by shifting the plasmonic resonance of the nanoparticles due to the increase in size, which may confound the results. Settling of the nanoparticles is also undesirable since there is a reduction of the nanoparticle density interacting with the electric and magnetic fields that way decrease the MO effect and increase the transmission through the sample, confounding the results.
 
-Future work on this subject may involve a deeper investigation of the threshold between the linear and nonlinear components that cause the respective transmission properties.
+Future work on this subject may involve a deeper investigation of the threshold between the linear and nonlinear components that cause the respective transmission properties. Further work in this field may incorporate how plasmonic capping agents such as PVP may influence the magneto-optical responses. The electrostatic capping agents that are responsible for keeping the nanoparticles separated may influence the magneto-optical response by acting as a charge transfer complex. Lin et al. showed that when carbon nanotubes are bonded to a metal-to-ligand charge transfer complex, the resulting nanotubes exhibit magneto-optical responses when exposed to visible light [\cite{Lin:2015}]. 
