--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,8 +1,7 @@
 \section{Overview of the dissertation}
-This thesis covers a variety of ways that nanophotonics can harness the physics of light, from the ability to manipulate optical forces at the nanoscale, to developing efficient ways to encode information in the architecture of light. The focus of the thesis will be to understand the optical forces that are generated on nanoparticles and demonstrate the applications of such forces. 
-
-The first chapter of this thesis introduces the field of nanophotonics and explains how electron density waves that propagate along a metal-dielectric interface, commonly known as plasmons, can have such a large impact on the field. Following, is a brief introduction on how plasmonic excitations are born, as well as the forces that result from the high electric field density plasmons are known for.
-In chapter 2 the development of magneto-optical responses in plasmonic materials, that explores the magnetization of nanoparticles via the illumination of circularly-polarized light. This phenomenon offers a new degree of control over the Lorentz force exerted on plasmonic nanoparticles. As described in the third chapter, Lorentz forces influence the motion of anisotropic nanoparticles, namely nanowires, illuminated at oblique incidences, and described is the non-intuitive motion subsequently results. In the following chapter (chapter 4) polarization properties are explored for a metasurface composed of non-chiral sub-structures, the phenomenon of which is derived from the Lorentz force that occurs between substructures that are measured in the polarization properties as light passes through the material. Finally, chapter 5 illustrates an efficient way to spatially encode information with fractal architecture.
+This thesis covers a variety of ways that nanophotonics can harness the physics of light. The focus of this thesis will be to understand how optical forces are generated on plasmonic nanoparticles and demonstrate the applications of such forces. 
+%From the ability to manipulate optical forces at nanoscale dimensions, to developing efficient ways to encode information in the architecture of light. 
+The first chapter introduces the field of nanophotonics and explains how electron density waves, known as plasmons, impact the field. Following, is a brief introduction on how to couple light to plasmons, as well as the forces that result from the high local field enhancements plasmons are known for. Chapter 2 demonstrates magneto-optical responses in plasmonic materials. Gold nanospheres are magnetized when illuminated by circularly-polarized light. This phenomenon offers a new degree of control over the Lorentz force exerted on plasmonic nanoparticles. The third chapter describes how Lorentz forces influence the motion of plasmonic nanowires when illuminated by linearly-polarized light at oblique incidences. The non-intuitive motion that results have been observed by scientists yet has not been fully understood. This chapter explains the motion via the Lorentz forces produced from the excitation of chiral-hybrid plasmon modes. In the following chapter (chapter 4) chiral polarization properties are shown in a metasurface composed of non-chiral sub-structures. The phenomenon is derived from the interaction between substructures and is measured in the polarization properties as light passes through the metasurface. Finally, chapter 5 illustrates an efficient way to spatially encode information with fractal architecture.
 
 %As of recent, there has been a lot of interest in the development of 3D (metamaterials) and 2D (metasurface) geometries that possess optical properties not found in nature. While there has been much advancement in the field, such as the fabrication of negative index materials [\cite{Padilla:2006, Dolling:07, shelby:489}], perfect lenses [\cite{Khorasaninejad:2016, Yang:14, Khorasaninejad1190}], and materials with permittivity close to zero [\cite{JPark:2015c, Alu:07}], many of these materials are limited to a small sample area and possess other pitfalls of top-down processing. Complete understanding of the optical forces generated on metallic nanoparticles leads the way to facilitate bottom-up processing of metasurfaces and metamaterials suitable for large-scale production. 
 
@@ -13,12 +12,12 @@ In chapter 2 the development of magneto-optical responses in plasmonic materials
 %which is the topic of this work, led to the development of an emerging and fast
 %growing research field called plasmonics.
 \section{A brief history of light}
-Throughout history, scientists have sought to understand the nature of light, and thus electromagnetism. As our knowledge has progressed, so has our ability to utilize electromagnetism for countless improvements to our quality of life. Classical electromagnetic wave effects have been exploited for over 8000 years when the first mirrors were fashioned in Anatolia [\cite{Enoch:06}] and lenses were fashioned by Assyrian astronomers over 3000 years ago. Since then, more precise and delicate instruments have followed, and optical theory has been postulated in an effort to describe and probe the nature of the universe. It was Ibn al-Haytham, widely considered the first theoretical physicist, who developed the optical theory capable of describing reflection, refraction, and magnification 200 years before renaissance scientists. The steady march of progress continued, and in the 13th century Italy saw the invention of eye glasses for vision correction [\cite{ilardi:07}]. In the renaissance period optics remained at the forefront of science: Leonardo Da Vinci invented the first instrument to measure light intensity, the human eye was realized as an instrument of optics, and Galileo Galilei's work catalysed the emergence of telescopes and microscopes. It was only at the end of the renaissance period that scientists began to perceive the model of light different to the traditional ray optics, or particle theory of light. The wave theory of optics that Huygens and Hooke developed was able to explain some of the phenomena of light that ray optics could not, such as thin film interference or the polarization of light. For centuries after it seemed that the wave and particle theory were mutually exclusive. Only after the development of electromagnetic theory by James Clerk Maxwell in the 19th century was particle theory was succeeded by wave theory, and electric and magnetic fields, which were before considered two separate forces, were linked through four equations that bear now his name [\cite{jackson, Landau}]. 
+Throughout history, scientists have sought to understand the nature of light, and thus electromagnetism. As our knowledge has progressed, so has our ability to utilize electromagnetism to improve our quality of life. For over 8000 years classical electromagnetic wave effects have been exploited when the first mirrors were fashioned in Anatolia [\cite{Enoch:06}]. Lenses emerged over 3000 years ago, where Assyrian astronomers used them to observe the stars. Since then, more precise and delicate instruments have followed, and more complex optical theory has been postulated in an effort to describe and probe the nature of the universe. It was Ibn al-Haytham, widely considered the first theoretical physicist, who developed the theory capable of describing reflection, refraction, and magnification 200 years before renaissance scientists. The steady march of progress continued, and in the 13th century Italy saw the invention of eye glasses for vision correction [\cite{ilardi:07}]. In the renaissance period optics remained at the forefront of science: Leonardo Da Vinci invented the first instrument to measure light intensity, the human eye was realized as an instrument of optics, and Galileo Galilei's work catalysed the emergence of telescopes and microscopes. Only at the end of the renaissance period did scientists begin to perceive the model of light different to the traditional ray optics, or particle theory of light. The wave theory of optics that Huygens and Hooke developed was able to explain some of the phenomena of light that ray optics could not, such as thin film interference or the polarization of light. For centuries after it seemed that the wave and particle theory were mutually exclusive. Only after the development of electromagnetic theory by James Clerk Maxwell in the 19th century was particle theory was succeeded by wave theory, and electric and magnetic fields, which were before considered two separate forces, were linked through four equations that bear now his name [\cite{jackson, Landau}]. 
 
-In the field of optics there has been no bigger leap in progress than that which the invention of the laser has in 1960 has provided, where such high sources of spectral brightness were realized and nonlinear effects could be discovered. This marked the birth of a new field\textemdash photonics, whose fundamental difference from optics is the existence of the quantum unit, known as the photon. The importance of photonics in modern science cannot be understated, the Optical Society of America reports that since 1960 30\% of physics prize recipients have been photonics-related or strongly benefited from photonics technologies. The invention of the laser and subsequent products from the field has changed our society, from the way we support our global communications network to the way we correct our vision, revolutionizing our understanding of light control. 
+In the field of optics there has been no bigger leap in progress than that which the invention of the laser has provided in 1960. The laser provided sources of spectral brightness were previously unrealized such that nonlinear effects could be discovered. This marked the birth of a new field\textemdash photonics, whose fundamental difference from optics is the existence of the quantum unit, known as the photon. The importance of photonics in modern science cannot be understated, the Optical Society of America reports that since 1960 30\% of physics prize recipients have been photonics-related or strongly benefited from photonics technologies. The invention of the laser and subsequent products from the field has changed our society, from the way we support our global communications network to the way we correct our vision, revolutionizing our understanding of light control. 
 
 \section{Polarization}
-The ability to manipulate and control lights fundamental properties, colour, intensity, and polarization, through light-matter interactions is the ultimate goal for photonics researchers. Polarization refers to the direction of the electromagnetic field vectors in space. In the most general sense it can be described by elliptical motion, relating to the path the electric field vector follows as the wave propagates. There are many light-matter interactions that depend on the incident polarization of the incident light, for example the strength of reflections, absorption or scattering [\cite{Hulst}]. Following conventions, we can consider the electric field of an plane electromagnetic wave travelling in the $z$-direction in Cartesian coordinates ($x,y,z$):
+The ability to manipulate and control the fundamental properties of light\textemdash colour, intensity, and polarization\textemdash through light-matter interactions is the ultimate goal for photonics researchers. Polarization refers to the direction of the electric field vector in space. In the most general sense it can be described by elliptical motion, relating to the path the electric field vector follows as the wave propagates. There are many light-matter interactions that depend on the incident polarization of the incident light, for example the strength of reflections, absorption or scattering [\cite{Hulst}]. Following conventions, we can consider the electric field of an plane electromagnetic wave travelling in the $z$-direction in Cartesian coordinates ($x,y,z$):
 \begin{equation}
 \mathbf{E}(t, z) =\mathbf{E}_0 \cos(\omega t-kz-\phi),
 \end{equation}where $\mathbf{E}_0$ is the magnitude of the electric field in the $x-y$ plane, $\omega$ is the angular frequency, $t$ refers to time, $k$ is the wave-vector, and $\phi$ denotes some arbitrary phase. The electric field vector is perpendicular to the direction of propagation, $z$, so we can decompose the electric fields into $x$ and $y$ components:
@@ -35,9 +34,9 @@ Traditionally, the polarization of light is manipulated through interaction with
 
 \section{Surface plasmon polaritons}
 
-Plasmonics [\cite{Barnes}] – named after the electron density waves that propagate along a metal-dielectric interface is a blossoming sub-field of optics. In particular there has been a tremendous amount of progress in the fabrication and manipulation methods of nanometer-sized objects in the last few decades that has allowed us to make significant leaps and bounds in the field of optics. %Plasmonic excitations need specific environmental conditions  for excitation by photons including a polarization-dependence of the incident photons
+Plasmonics [\cite{Barnes}]\textemdash named after the electron density waves that propagate along a metal-dielectric interface is a blossoming sub-field of optics. In particular there has been a tremendous amount of progress in the fabrication and manipulation methods of nanometer-sized objects in the last few decades that has allowed us to make significant leaps and bounds in the field of optics. %Plasmonic excitations need specific environmental conditions  for excitation by photons including a polarization-dependence of the incident photons
 
-Certain promises that the sub-field of plasmonics offers are responsible for the surge of interest in the research field, for example a new generation of ultra-fast computing [\cite{Atwater07}], new possibilities to treat cancer and HIV/AIDS [\cite{Kumar2011}], topological insulators [\cite{Deshko16}], or the ability fabricate negative-refraction materials and perfect lenses [\cite{Urbas2016}]. This could be made possible because plasmonics bridges the microscopic with the nanoscopic by confining light on sub-wavelength volumes. Plasmonic structures are typically composed of metallic nanostructures or thin-films interfacing with a dielectric medium, in particular noble metals are employed as their high electron density causes plasmonic excitation to occur in the visible regime.
+Certain promises that plasmonics offers are responsible for the surge of interest in the research field, for example a new generation of ultra-fast computing [\cite{Atwater07}], possibilities to treat cancer and HIV/AIDS [\cite{Kumar2011}], topological insulators [\cite{Deshko16}], or the ability fabricate negative-refraction materials and perfect lenses [\cite{Urbas2016}]. This could be made possible because plasmonics bridges the microscopic with the nanoscopic, confining light to sub-wavelength volumes. Plasmonic structures are typically composed of metallic nanostructures or thin-films interfacing with a dielectric medium, in particular noble metals are employed as their high electron density causes plasmonic excitation to occur in the visible regime.
 
 \subsection{The Drude Model}
 
@@ -96,12 +95,12 @@ The modified dielectric constant gives rise to a number of interesting propertie
 The dispersion relation for a plasma is given by the relation $\omega^2 = \omega_p^2+c^2k^2$ which results in an asymptotically linear behaviour. Figure~\ref{dispRelation} shows an example of the dispersion relation of aluminium.
 \begin{figure}[h!t]
 \centering
-\includegraphics[width=0.75\textwidth]{dispRelation.pdf}
-\caption{Dispersion relation of surface plasmon modes in aluminium with water ($\epsilon_d=1.77$) as the surrounding dielectric. Dashed line represents the light line.}
+\includegraphics[width=0.75\textwidth]{plasmon_dispersion.png}
+\caption{Dispersion relation of bulk plasmons, free-space electromagnetic waves and surface plasmon modes.}
 \label{dispRelation}
 \end{figure}
 
-Surface plasmon modes are oscillations of plasma, their properties can be derived from Maxwell's equations. Interestingly, when these equations are solved with the appropriate boundary conditions between a noble metal and a dielectric the surface plasmon mode produced can have a larger momentum than the free-space photon that produced it $(k_{SP}>k_0)$, where the frequency-dependent surface plasmon wave-vector is given by the relation [\cite{Sambles}]:
+Surface plasmon modes are oscillations of plasma, their properties can be derived from Maxwell's equations. When these equations are solved with the appropriate boundary conditions between a noble metal and a dielectric the surface plasmon mode produced can have a larger momentum than the free-space photon that produced it $(k_{SP}>k_0)$, where the frequency-dependent surface plasmon wave-vector is given by the relation [\cite{Sambles}]:
 \begin{equation}
 k_{SP} = k_0\sqrt{\frac{\epsilon_d\epsilon_m}{\epsilon_d+\epsilon_m}}
 \label{ksp}
@@ -110,7 +109,7 @@ where $\epsilon_d$ is the dielectric constant of the surrounding dielectric and 
 
 In general mode-matching conditions are satisfied by either using a prism, or other dielectric with permittivity $\>$1, to couple light at the interface [\cite{Kretschmann}], through defects on the surface [\cite{Hecht}], or via diffraction with periodic surface structures such as gratings [\cite{Ritchie}].
 
-Surface plasmons are known by two kinds, surface plasmon polaritons (SPPs) and localized surface plasmons (LSPs) [\cite{MaierBook}]. SPPs are composed of an electron density wave (plasmon part) coupled to a light wave (polariton part) and travel along the metal-dielectric interface. The dispersion relation dictates the wavelength  of the SPP, the coupling of light to the SPP results in a reduction of the free-space wavelength that is beneficial for electric field confinement. SPPs are commonly excited by 2D periodic grating structures as the periodic structure is able to provide the necessary in-plane wave-vector matching conditions. LSP resonances are a localized resonances of the charge density around nanostructures smaller than the wavelength of light. The resonance is highly dependent on the size, shape, material and surrounding environment of the nanostructure [\cite{Link1}], making them excellent candidates for sensors, in which small changes in environmental conditions are to be detected.
+Plasmons are known by two kinds, surface plasmon polaritons (SPPs) and localized surface plasmons (LSPs) [\cite{MaierBook}]. SPPs are composed of an electron density wave (plasmon part) coupled to a light wave (polariton part) and travel along the metal-dielectric interface. The dispersion relation dictates the wavelength  of the SPP, the coupling of light to the SPP results in a reduction of the free-space wavelength that is beneficial for electric field confinement. SPPs are commonly excited by 2D periodic grating structures as the periodic structure is able to provide the necessary in-plane wave-vector matching conditions. LSP resonances are a localized resonances of the charge density around nanostructures smaller than the wavelength of light. The resonance is highly dependent on the size, shape, material and surrounding environment of the nanostructure [\cite{Link1}], making them excellent candidates for sensors, in which small changes in environmental conditions are to be detected.
 
 \subsection{Coupling to Plasmons}
 \label{deriv}
